[package]
name = "macroquad"
version = "0.3.0-alpha.17"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/macroquad"
repository = "https://github.com/not-fl3/macroquad"
description = """
Fork of a simple and easy to use graphics library
"""
readme="README.md"

[features]
default = ["log-impl"]
log-impl = ["miniquad/log-impl"]

# [package.metadata.docs.rs]
# all-features = true

[dependencies]
miniquad = "0.3.0-alpha.29"
quad-rand = { git = "https://github.com/DoNotDoughnut/quad-rand" }
glam = {version = "0.10", features = ["scalar-math"] }
image = { version = "0.23.12", default-features = false, features = ["png", "tga"] }
macroquad_macro = { version = "0.1.2", path = "macroquad_macro" }

ahash = "0.7"