[package]
name = "macroquad"
version = "0.3.3"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/macroquad"
repository = "https://github.com/not-fl3/macroquad"
description = """
Fork of a simple and easy to use graphics library
"""
readme="README.md"

[features]
default = ["log-impl", "audio"]
log-impl = ["miniquad/log-impl"]
ui = ["text"]
text = ["fontdue"]
audio = ["rodio"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { git = "https://github.com/DoNotDoughnut/miniquad" }
ahash = "0.7"
glam = { version = "0.14", features = ["scalar-math"] }
image = { version = "0.23.12", default-features = false, features = ["png", "tga"] }
macroquad_macro = { version = "0.1.2", path = "macroquad_macro" }
fontdue = { version = "0.5", optional = true }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
rodio = { version = "0.13.0", default-features = false, features = ["vorbis"], optional = true }
